--- a/templates/summary.html
+++ b/templates/summary.html
@@ -7,8 +7,8 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../stylesheets/style.css">
-        <link rel="stylesheet" href="../stylesheets/summary.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/style.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/summary.css') }}">
 
     </head>
     <body>
@@ -16,7 +16,7 @@
             <input type="file" id="fileInput" style="display: none;">   
             <div class="row" id="banner_row">
                 <div class="col-md-1"></div>
-                <div class="col-md-10"><center><img id=banner src='../assets/swisscom-logo.png'></img></center></div>
+                <div class="col-md-10"><center><img id=banner src='{{ url_for('static', filename='assets/swisscom-logo.png') }}'></img></center></div>
                 <div class="col-md-1"></div>
             </div>
             <div class="row" id="search_row">
@@ -65,7 +65,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
-        <script src="../javascripts/common.js"></script>
-        <script src="../javascripts/summary.js"></script>
+        <script src="{{ url_for('static', filename='javascripts/common.js') }}"></script>
+        <script src="{{ url_for('static', filename='javascripts/summary.js') }}"></script>
     </body>
 </html>
