--- a/templates/chatbot_swisscom.html
+++ b/templates/chatbot_swisscom.html
@@ -26,7 +26,7 @@
                     <div class="input-group col-md-12">
                         <span class="input-group-btn">
                             <button class="btn btn-info btn-lg" type="button" id='project_select'>
-                            <span id="project_value">Chatbot</span>
+                            <span id="project_value">Swisscom</span>
                             </button>
                         </span>
                         <input type="text" id="input_text" class="form-control input-lg" placeholder="Ask me something!" />
@@ -65,6 +65,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
     <script type=text/javascript src="{{ url_for('static', filename='javascripts/common.js') }}"></script>
-    <script type=text/javascript src="{{ url_for('static', filename='javascripts/chatbot.js') }}"></script>
+    <script type=text/javascript src="{{ url_for('static', filename='javascripts/chatbot_swisscom.js') }}"></script>
   </body>
 </html>
