--- a/templates/opinion_target.html
+++ b/templates/opinion_target.html
@@ -7,15 +7,15 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../stylesheets/style.css">
-        <link rel="stylesheet" href="../stylesheets/opinion_target.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/style.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/opinion_target.css') }}">
 
     </head>
     <body>
         <div class="container">
             <div class="row" id="banner_row">
                 <div class="col-md-1"></div>
-                <div class="col-md-10"><center><img id=banner src='../assets/swisscom-logo.png'></img></center></div>
+                <div class="col-md-10"><center><img id=banner src='{{ url_for('static', filename='assets/swisscom-logo.png') }}'></img></center></div>
                 <div class="col-md-1"></div>
             </div>
             <div class="row" id="search_row">
@@ -50,11 +50,11 @@
                 <div class="col-md-10">
                     <div class="col-md-6 answer_model">
                         <div id="answer_embeddings"></div>
-                        <img class="robot" id='r-clever' hidden src='../assets/r-clever.png'></img>
+                        <img class="robot" id='r-clever' hidden src='{{ url_for('static', filename='assets/r-clever.png') }}'></img>
                     </div>
                     <div class="col-md-6 answer_model">
                         <div id="answer_baseline"></div>
-                        <img class="robot" id='r-dumb' hidden src='../assets/r-dumb.png'></img>
+                        <img class="robot" id='r-dumb' hidden src='{{ url_for('static', filename='assets/r-dumb.png') }}'></img>
                     </div>
                 </div>
                 <div class="col-md-1"></div>
@@ -74,7 +74,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
-        <script src="../javascripts/common.js"></script>
-        <script src="../javascripts/opinion_target.js"></script>
+        <script src="{{ url_for('static', filename='javascripts/common.js') }}"></script>
+        <script src="{{ url_for('static', filename='javascripts/opinion_target.js') }}"></script>
     </body>
 </html>
