More Opinion Target changes

--- a/templates/opinion_target.html
+++ b/templates/opinion_target.html
@@ -52,10 +52,11 @@
                         <div id="answer_embeddings"></div>
                         <img class="robot" id='r-clever' hidden src='{{ url_for('static', filename='assets/r-clever.png') }}'></img>
                     </div>
+                    <!--
                     <div class="col-md-6 answer_model">
                         <div id="answer_baseline"></div>
                         <img class="robot" id='r-dumb' hidden src='{{ url_for('static', filename='assets/r-dumb.png') }}'></img>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-md-1"></div>
             </div>
