--- a/templates/summary_url.html
+++ b/templates/summary_url.html
@@ -24,7 +24,7 @@
                 <div class="col-md-10">
                     <div id="custom-search-input">
                         <div class="input-group col-md-12">
-                            <span class="input-group-btn">
+                            <span class="input-group-btn group-larger">
                                 <button class="btn btn-info btn-lg" type="button" id='project_select'>
                                 <span id="project_value">Summary</span>
                                 </button>
