Unsupervised model for ATE

--- a/templates/opinion_target.html
+++ b/templates/opinion_target.html
@@ -37,7 +37,18 @@
                 </div>
                 <div class="col-md-1"></div>
             </div>
-
+            <div class="row" id="search_row">
+                <div class="col-md-1"></div>
+                <div class="col-md-5 learning_type">
+                    <label class='learning_label'>
+                    <input type="radio" id="supervised" name="learning" value="supervised" checked /> Supervised</label>
+                </div> 
+                <div class="col-md-5 learning_type">
+                    <label class='learning_label'>
+                    <input type="radio" id="unsupervised" name="learning" value="unsupervised" /> Unsupervised</label>
+                </div>
+                <div class="col-md-1"></div>
+            </div>
             <div class="row" id="question_row">
                 <div class="col-md-1"></div>
                 <div class="col-md-10">
@@ -70,6 +81,7 @@
             </div>
 
         </div>
+
         <!-- jQuery first, then Tether, then Bootstrap JS. -->
         <script  src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
