update summary models

--- a/templates/summary_url.html
+++ b/templates/summary_url.html
@@ -40,7 +40,18 @@
                 </div>
                 <div class="col-md-1"></div>
             </div>
-
+            <div class="row" id="search_row">
+                <div class="col-md-1"></div>
+                <div class="col-md-5 learning_type">
+                    <label class='learning_label'>
+                    <input type="radio" id="extractive" name="model_type" value="extractive" checked /> Extractive Model</label>
+                </div> 
+                <div class="col-md-5 learning_type">
+                    <label class='learning_label'>
+                    <input type="radio" id="abstractive" name="model_type" value="abstractive" /> Abstractive Model</label>
+                </div>
+                <div class="col-md-1"></div>
+            </div>
             <div class="row" id="question_row">
                 <div class="col-md-1"></div>
                 <div class="col-md-10">
