add mixture network model

--- a/templates/summary_url.html
+++ b/templates/summary_url.html
@@ -41,16 +41,18 @@
                 <div class="col-md-1"></div>
             </div>
             <div class="row" id="search_row">
-                <div class="col-md-1"></div>
-                <div class="col-md-5 learning_type">
+                <div class="col-md-4 learning_type">
                     <label class='learning_label'>
                     <input type="radio" id="extractive" name="model_type" value="extractive" checked /> Extractive Model</label>
                 </div> 
-                <div class="col-md-5 learning_type">
+                <div class="col-md-4 learning_type">
                     <label class='learning_label'>
                     <input type="radio" id="abstractive" name="model_type" value="abstractive" /> Abstractive Model</label>
                 </div>
-                <div class="col-md-1"></div>
+                <div class="col-md-4 learning_type">
+                    <label class='learning_label'>
+                    <input type="radio" id="mixed" name="model_type" value="mixed" /> Mixed Model</label>
+                </div>
             </div>
             <div class="row" id="question_row">
                 <div class="col-md-1"></div>
