Added sample table

--- a/templates/neural_programmer.html
+++ b/templates/neural_programmer.html
@@ -50,7 +50,14 @@
             </div>
             <div class="col-md-1"></div>
       </div>
-    <div class="row" id="suggestions_row">
+      <div class="row" id="table_row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+                <div id="table"></div>
+            </div>
+            <div class="col-md-1"></div>
+       </div>
+      <div class="row" id="suggestions_row">
 
         <div class="col-md-1"></div>
         <div class="col-md-10">
