Changed table container name

--- a/templates/neural_programmer.html
+++ b/templates/neural_programmer.html
@@ -53,7 +53,7 @@
       <div class="row" id="table_row">
             <div class="col-md-1"></div>
             <div class="col-md-10">
-                <div id="table"></div>
+                <div id="table_container"></div>
             </div>
             <div class="col-md-1"></div>
        </div>
