Some changes on style

--- a/static/stylesheets/neural_programmer.css
+++ b/static/stylesheets/neural_programmer.css
@@ -18,6 +18,9 @@
 	background: rgba(119, 185, 248, 0.2);
 	cursor: pointer;
 }
-table {
+#table {
 	text-align: center;
+}
+.table th {
+   text-align: center;
 }
