Step by step debug implemneted (ugly version) on demo

--- a/static/stylesheets/neural_programmer.css
+++ b/static/stylesheets/neural_programmer.css
@@ -24,3 +24,12 @@
 .table th {
    text-align: center;
 }
+
+#answers {
+   padding-left: 0;
+   padding-right: 0;
+}
+
+#debug {
+  text-align: left;
+}
