--- a/templates/neural_programmer.html
+++ b/templates/neural_programmer.html
@@ -43,8 +43,9 @@
             <div class="col-md-10">
                 <div id="question"></div>
                 <div class="row" id="answer_benchmark">
-                    <div  class="col-md-12">
-                        <div id="answer_np"></div>
+                    <div  class="col-md-12" id="answers">
+                        <div id="answer_np"></div><br>
+			<div id="debug"></div>
                     </div>
                 </div>
             </div>
