--- a/templates/neural_programmer.html
+++ b/templates/neural_programmer.html
@@ -43,16 +43,10 @@
             <div class="col-md-10">
                 <ul class="chat-ul">
                   <li>
-                    <div class="message-data">
-                      <span class="message-data-name"><i class="fa fa-circle you"></i> Question</span>
-                    </div>
-                    <div  id="question" class="message you-message"></div>
+                    <div id="question" hidden class="message you-message"></div>
                   </li>
                   <li class="clearfix">
-                    <div class="message-data align-right">
-                      <span class="message-data-name">Answer</span> <i class="fa fa-circle me"></i>
-                    </div>
-                    <div id="answer_np" class="message me-message float-right"></div>
+                    <div id="answer_np" hidden class="message me-message float-right"></div>
                   </li>
                 </ul>
 
