Visibility hidden in css

--- a/templates/neural_programmer.html
+++ b/templates/neural_programmer.html
@@ -43,10 +43,10 @@
             <div class="col-md-10">
                 <ul class="chat-ul">
                   <li>
-                    <div id="question" hidden class="message you-message"></div>
+                    <div id="question" class="message you-message"></div>
                   </li>
                   <li class="clearfix">
-                    <div id="answer_np" hidden class="message me-message float-right"></div>
+                    <div id="answer_np" class="message me-message float-right"></div>
                   </li>
                 </ul>
 
