--- a/static/stylesheets/neural_programmer.css
+++ b/static/stylesheets/neural_programmer.css
@@ -4,6 +4,11 @@
 #question {
     font-size: 18px;
     margin: 20px 20px 30px 20px;
+    visibility: hidden;
+}
+
+#answer_np {
+  visibility: hidden;
 }
 
 #suggestions {
@@ -31,6 +36,7 @@
    padding-left: 0;
    padding-right: 0;
 }
+
 
 #debug {
   text-align: left;
