--- a/templates/neural_programmer.html
+++ b/templates/neural_programmer.html
@@ -50,7 +50,7 @@
                   </li>
                 </ul>
 
-			     <div id="debug" class="message debug-message"></div>
+			     <div id="debug" class="debug-message"></div>
 
             </div>
             <div class="col-md-1"></div>
