Greek guy wanted blue colors

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -68,6 +68,10 @@
     color: red;
     font-weight: bold;
 }
+.blue {
+    color: #348edd;
+    font-weight: bold;
+}
 
 #banner {
     width: 50%;
