--- a/static/stylesheets/neural_programmer.css
+++ b/static/stylesheets/neural_programmer.css
@@ -10,7 +10,6 @@
     font-size: 16px;
     margin: 20px 20px 30px 0px;
     visibility: hidden;
-    width: min-content;
 }
 
 #answer_np {
@@ -77,7 +76,6 @@
   font-size: 16px;
   border-radius: 5px;
   margin-bottom: 30px;
-  min-width: 40%;
   position: relative;
 }
 .message:after {
@@ -97,6 +95,7 @@
 }
 .me-message {
   background: #348edd;
+  text-align: right;
 }
 .me-message:after {
     border-color: #348edd transparent;
@@ -111,7 +110,7 @@
   line-height: 26px;
   font-size: 16px;
   border-radius: 5px;
-  width: 60%;
+  display: inline-block;
   position: relative;
   color: #003366;
 }
