more visual changes

--- a/static/stylesheets/neural_programmer.css
+++ b/static/stylesheets/neural_programmer.css
@@ -1,10 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700);
 @import url('//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css');
 
-@media (min-width: 1200px) {
-  .container {
-    width: 70% !important;
-  }
+.container {
+  width: 90% !important;
 }
 #question {
     font-size: 16px;
@@ -14,6 +12,7 @@
 
 #answer_np {
   visibility: hidden;
+  margin-bottom: 0px;
 }
 
 #suggestions {
@@ -47,6 +46,7 @@
   text-align: left;
   visibility: hidden;
   display: inline-block;
+  margin-bottom: 20px;
 }
 
 #answer_benchmark, #answer_chatbot {
