--- a/static/stylesheets/neural_programmer_feedback.css
+++ b/static/stylesheets/neural_programmer_feedback.css
@@ -27,7 +27,6 @@
 }
 .suggestion .panel-body {
 	background: rgba(119, 185, 248, 0.2);
-  height: 75px;
 	cursor: pointer;
 }
 #table {
@@ -130,6 +129,10 @@
 
 .panel-default:hover {
   background: rgba(119, 185, 248, 0.2);
+}
+
+.step .panel-body {
+    height: 75px;
 }
 
 .chat-ul li{
