Animations for steps

--- a/static/stylesheets/neural_programmer_feedback.css
+++ b/static/stylesheets/neural_programmer_feedback.css
@@ -129,6 +129,9 @@
   position: relative;
   color: #003366;
 }
+.steps_box {
+  display: none;
+}
 
 .panel-default:hover {
   background: rgba(119, 185, 248, 0.2);
