Added second mode with simpler steps

--- a/static/stylesheets/neural_programmer_feedback.css
+++ b/static/stylesheets/neural_programmer_feedback.css
@@ -249,11 +249,20 @@
 #count {
   position: absolute;
   bottom: 5px;
-  right: 5px;
+  right: 155px;
 }
 
 #content {
   position: absolute;
   bottom: 5px;
-  right: 80px;
+  right: 72px;
+}
+#other, #submit {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+}
+
+#cell_example {
+  font-size: 12px;
 }
