--- a/templates/neural_programmer_tutorial.html
+++ b/templates/neural_programmer_tutorial.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
   <head>
+  <title>Tutorial</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
 
@@ -68,6 +69,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tour/0.11.0/js/bootstrap-tour-standalone.js"></script>
     <script type=text/javascript src="{{ url_for('static', filename='javascripts/common.js') }}"></script>
-    <script type=text/javascript src="{{ url_for('static', filename='javascripts/neural_programmer_feedback.js') }}"></script>
+    <script type=text/javascript src="{{ url_for('static', filename='javascripts/neural_programmer_tutorial.js') }}"></script>
   </body>
 </html>
