Added text of tutorial verification

--- a/templates/neural_programmer_landing.html
+++ b/templates/neural_programmer_landing.html
@@ -23,32 +23,32 @@
       <div class="row">
         <div class="col-md-2 col-sm-0"></div>
         <div class="col-md-8 col-sm-12">
-          <div class="col-sm-6 col-md-4">
+          <div class="col-sm-12 col-md-4">
             <div class="thumbnail">
               <i class="fa fa-5x fa-info-circle" aria-hidden="true"></i>
-              <div class="caption">
+              <div class="caption tutorial">
                 <h3>Tutorial</h3>
                 <p>What is this so called "Neural Programmer"? What can I do with it? How does it work? You must visit this tutorial before trying the other demos. It's only 2 minutes, I promise.</p>
               </div>
               <div class="button-go"><a id="tutorial" href="/neural_programmer/tutorial" class="btn btn-primary" role="button">Go</a></div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4">
+          <div class="col-sm-12 col-md-4">
             <div class="thumbnail">
               <i class="fa fa-5x fa-comments" aria-hidden="true"></i>
               <div class="caption">
                 <h3>Demo without steps</h3>
-                <p>First demo showed in the tutorial. Ask a question and get an answer.</p>
+                <p id="demo_simple_desc">First demo showed in the tutorial. Ask a question and get an answer.</p>
               </div>
               <div class="button-go"><a id="demo_simple" href="/neural_programmer/simple" class="btn btn-primary" role="button">Go</a></div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4">
+          <div class="col-sm-12 col-md-4">
             <div class="thumbnail">
               <i class="fa fa-5x fa-cogs" aria-hidden="true"></i>
-              <div class="caption">
+              <div class="caption demos">
                 <h3>Demo with steps</h3>
-                <p>Second demo showed in the tutorial. Apart from the answer, you also get a step-by-step explanation of the thinking process of the chatbot, useful to understand how it works.</p>
+                <p id="demo_steps_desc">Second demo showed in the tutorial. Includes the step-by-step thinking process of the chatbot, useful to understand how it works.</p>
               </div>
               <div class="button-go"><a id="demo_steps" href="/neural_programmer/steps" class="btn btn-primary" role="button">Go</a></div>
             </div>
