--- a/templates/neural_programmer_landing.html
+++ b/templates/neural_programmer_landing.html
@@ -38,7 +38,7 @@
               <i class="fa fa-5x fa-cogs" aria-hidden="true"></i>
               <div class="caption demos">
                 <h3>Thinking process demo</h3>
-                <p id="demo_steps_desc">Last demo showed in the tutorial. Includes the step-by-step thinking process of the chatbot, useful to understand how the chatbot generates the answers.</p>
+                <p id="demo_steps_desc">Last demo showed in the tutorial. Includes the step-by-step thinking process of the chatbot.</p>
               </div>
               <div class="button-go"><a id="demo_steps" href="/neural_programmer/steps" class="btn btn-primary" role="button">Go</a></div>
             </div>
