Added home button

--- a/static/stylesheets/neural_programmer_feedback.css
+++ b/static/stylesheets/neural_programmer_feedback.css
@@ -271,3 +271,12 @@
 button[data-role='end'] {
   display: none;
 }
+
+#home_button {
+  height: 54px;
+  text-align: left;
+  padding-top: 13px;
+}
+#home_button span {
+  cursor: pointer;
+}
