--- a/templates/neural_programmer_simple.html
+++ b/templates/neural_programmer_simple.html
@@ -19,7 +19,7 @@
   <body>
     <div class="container">
       <div class="row" id="search_row">
-            <div class="col-md-1"></div>
+            <div class="col-md-1" id="home_button"><span class="fa fa-2x fa-arrow-left"></span></div>
             <div class="col-md-10">
                 <div id="custom-search-input">
                     <div class="input-group col-md-12">
