--- a/templates/neural_programmer_landing.html
+++ b/templates/neural_programmer_landing.html
@@ -21,7 +21,7 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-md-2 col-sm-0"></div>
+        <div class="col-md-2 col-sm-0"><div id="explain"><i class="fa fa-question-circle-o fa-2x" aria-hidden="true"></i></div><div id="explanation">The purpose of this chatbot is retrieving and generating answers to questions about a data source using natural language. The results are good, but we believe that we can get better and this demos are designed to help us. Thank you for your collaboration!</div></div>
         <div class="col-md-8 col-sm-12">
           <div class="col-sm-12 col-md-4">
             <div class="thumbnail">
@@ -37,7 +37,7 @@
             <div class="thumbnail">
               <i class="fa fa-5x fa-cogs" aria-hidden="true"></i>
               <div class="caption demos">
-                <h3>Thinking process demo</h3>
+                <h3>Demo: Thinking Process</h3>
                 <p id="demo_steps_desc">Last demo showed in the tutorial. Includes the step-by-step thinking process of the chatbot.</p>
               </div>
               <div class="button-go"><a id="demo_steps" href="/neural_programmer/steps" class="btn btn-primary" role="button">Go</a></div>
@@ -47,7 +47,7 @@
             <div class="thumbnail">
               <i class="fa fa-5x fa-comments" aria-hidden="true"></i>
               <div class="caption">
-                <h3>Plain demo</h3>
+                <h3>Demo: Direct Answer</h3>
                 <p id="demo_simple_desc">First demo showed in the tutorial. Ask a question and get an answer.</p>
               </div>
               <div class="button-go"><a id="demo_simple" href="/neural_programmer/simple" class="btn btn-primary" role="button">Go</a></div>
